[package]
name = "bevy_cube_marcher"
version = "0.4.0"
edition = "2024"
description = "A refreshingly complex input crate for Bevy"
repository = "https://github.com/DragonFoxCollective/bevy_cube_marcher"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "chunk", "generation", "marching_cubes", "terrain"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_log",
  "bevy_pbr",
  "bevy_render"
] }
encase = "0.12"  # match bevy_render

[dev-dependencies]
bevy = { version = "0.18", features = ["track_location"] }
bevy_panorbit_camera = "0.34"

[lints.clippy]
too_many_arguments = "allow"
